welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:14: error: '(' expected but identifier found.
    }else if nums(k)=m{
             ^max2Value:17: error: illegal start of simple expression
  }
  ^